force-app/main/default/objects/WSParamBaseGI__mdt/WSParamBaseGI__mdt.object-meta.xml
<CustomObject>
    <description>Décrit les différents web service à utiliser avec la Base GI et les outils liés</description>
    <label>WS Param BaseGI</label>
    <pluralLabel>WS Params BaseGI</pluralLabel>
</CustomObject>