force-app/main/default/objects/WSParamBaseGI__mdt/fields/AttributsGet__c.field-meta.xml
<CustomField>
    <fullName>AttributsGet__c</fullName>
    <description>Une liste des arguments à renseigner pour le web service. Fonctionne pour les Web Service utilisant la méthode GET. Les attributs, s&#39;ils sont plusieurs, sont séparés par un &#39;;&#39;</description>
    <label>AttributsGet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>