force-app/main/default/objects/WSParamBaseGI__mdt/fields/CleAuth__c.field-meta.xml
<CustomField>
    <fullName>CleAuth__c</fullName>
    <label>Clé Auth</label>
    <length>32</length>
    <type>Text</type>
</CustomField>