force-app/main/default/objects/WSParamBaseGI__mdt/fields/Domaine__c.field-meta.xml
<CustomField>
    <fullName>Domaine__c</fullName>
    <description>Le domaine du web service à appeler</description>
    <label>Domaine</label>
    <length>50</length>
    <type>Text</type>
</CustomField>