force-app/main/default/objects/WSParamBaseGI__mdt/fields/StatutCodeSucces__c.field-meta.xml
<CustomField>
    <fullName>StatutCodeSucces__c</fullName>
    <label>Statut code succès</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>