force-app/main/default/objects/WSParamBaseGI__mdt/fields/TypeAuth__c.field-meta.xml
<CustomField>
    <fullName>TypeAuth__c</fullName>
    <description>Le type d&#39;authentification</description>
    <label>Type Auth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bearer</fullName>
                <default>true</default>
                <label>Bearer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>