force-app/main/default/objects/WSParamBaseGI__mdt/fields/WsEndpoint__c.field-meta.xml
<CustomField>
    <fullName>WsEndpoint__c</fullName>
    <description>Le endpoint du web service sans le nom de domaine.</description>
    <label>WS Endpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>